--- a/fivemenu/package.json
+++ b/fivemenu/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "fivemenu",
-	"version": "0.1.0",
-	"description": "Example block scaffolded with Create Block tool.",
-	"author": "The WordPress Contributors",
-	"license": "GPL-2.0-or-later",
+	"version": "1.0.0",
+	"description": "A five catagory menu",
+	"author": "Maurice Yu",
+	"license": "TBD",
 	"main": "build/index.js",
 	"scripts": {
 		"build": "wp-scripts build",
